# Generador-de-Personajes-2024

./: .gitignore  README.md  pyproject.toml
src/: dnddata.json  dnddata.py  especies.json  main.py  pdfmanager.py  personaje.py
